--- a/design/_design.scss
+++ b/design/_design.scss
@@ -164,6 +164,9 @@
 .glider-contain {
     margin: 30px 0px;
     .glider {
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+        
         &::-webkit-scrollbar {
             height: 0px !important;
             width: 0 !important;
